# bare-screenshare

./: .gitignore  Cargo.toml  Makefile  build.rs
app/: Cargo.toml
app/src/: dbus.rs  macros.rs  main.rs  pipeline.rs  ui.rs  video.rs
raylib/: Cargo.toml
raylib/src/: lib.rs
raylib_sys/: Cargo.toml  build.rs
raylib_sys/src/: lib.rs
screenshare/: Cargo.toml
screenshare/src/: dbus.rs  main.rs
screenshare/src/pipewire/: bindings.rs
server/: Cargo.toml
server/src/: client.rs  conn.rs  lib.rs  macros.rs  main.rs  rpc.rs  state.rs
src/: macros.rs  main.rs  pipeline.rs  ui.rs  video.rs
src/pipewire/: pipewire.h
